# Rust-Web-Server

./: Cargo.toml  README.md
css/: home-styles.css  terminal-styles.css
html/: 404.html  ctf.html  index.html  loading.html  terminal.html
js/: terminal-script.js
src/: main.rs
