[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14.27"
hyper-rustls = "0.24.2"
rustls-pemfile = "1.0.3"
tokio = {version = "1", features = ["full"]}
rustls = "0.21.8"